--- a/templates/show_error.phtml
+++ b/templates/show_error.phtml
@@ -1,10 +1,11 @@
 <?php
 
-function showError($error){
+function showError($error)
+{
     require 'templates/header.phtml' ?>
     <div class='alert alert-danger' role='alert'>
         <?= $error ?>
-    </div> 
-    <?php require 'templates/footer.phtml';
+    </div>
+<?php require 'templates/footer.phtml';
 }
 ?>
