Reemplazo echo de error por función showError

--- a/templates/show_error.phtml
+++ b/templates/show_error.phtml
@@ -6,6 +6,7 @@ function showError($error)
     <div class='alert alert-danger' role='alert'>
         <?= $error ?>
     </div>
-<?php require 'templates/footer.phtml';
+<?php
+    require 'templates/footer.phtml';
 }
 ?>
